app/client/stylesheets/style.less
// Webfonts
@import "webfonts.import.less";

// overwrite bootstrap variables in bootstrap/custom.bootstrap.import.less
@import "bootstrap/custom.bootstrap.output.import.less";

// Custom variables
@import "variables.import.less";

// Admin
@import "edit_questions.import.less";
// import less/css from vendored libs
@import "lib/bs_sidedanv.import.less";

// Common/main site
@import "overlay-menu.import.less";
@import "blog.import.less";
@import "helpers.import.less";

// Smartervote app
@import "slider.import.less";
@import "smartervote.import.less";
@import "mybubbles.import.less";


html {
  height: 99.9%; // Wat body height!?
}
body {
  min-height: 99.9%; // Wat body height!?
}

/*
 * Common or front page styles
 */
body {
	margin: 0;
	//padding: @viewport-border-width;
	overflow-x: hidden;
	//overflow-y: scroll;
	
	background: white;
	color: black;
	
	font-family: 'SabonLTStd-Roman', serif;
	line-height: @line-height-default;
	
	@media only screen and (min-width: @screen-sm-min) {
  	padding: @viewport-border-width;
	}
}

h1, h2, h3, h4 {	
  border: none;
  color: black;
	font-family: 'BuenosAires', sans-serif;
	font-weight: bold;
	
	-webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

img {
  max-width: 100%;
}

a {
  color: #e7a73f;
  
  &:hover {
    color: black;
  }
}

.navbar {
  //display: none;
  margin-bottom: 0;
}

/*
 * Site header, logo, menu toggler
 */
#site-header {
  position: relative;
  z-index: 2100;
  margin: @padding-body-vertical @padding-body-horizontal;
  padding-bottom: 1.5rem;
  
  border-bottom: @border-default;
  
  font-family: 'BuenosAires', sans-serif;
	font-weight: bold;
}

#site-brand {
  a {
    color: black;
    
    &:hover {
      text-decoration: none;
    }
  }
}

.logo-circle {
  float: left;
  width: 2.2 * @font-size-logo-medium;
  height: 2.2 * @font-size-logo-medium;
  margin-right: 1rem;
  
  border-radius: 50%;
  background: @color-brand;
  background: linear-gradient(141deg, #ffed00 0%, #ffcc00 100%);
  
  @media only screen and (min-width: @screen-sm-min) {
    margin-right: 1.5rem;
  }
  
  @media only screen and (min-width: @screen-lg-min) {
    width: 3 * @font-size-logo-medium;
    height: 3 * @font-size-logo-medium;
    margin-right: 2rem;
  }
}

.logo-text {
  max-width: 20em;
  padding-top: 0.25rem;
  
  font-weight: bold;
  font-size: @font-size-logo-min;
  line-height: @line-height-logo;
  
	-webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  
  @media only screen and (min-width: @screen-sm-min) {
    //max-width: none;
    padding: 0;
    
    font-size: @font-size-logo-medium;
  }
  
  @media only screen and (min-width: @screen-lg-min) {
    font-size: @font-size-logo-large;
  }
}

#site-menu {
  float: right;
  
  font-weight: bold;
  
  .languages {
    display: none;
    font-size: 1.5rem;
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    margin-top: 0.5rem;
    
    .languages {
      display: inline-block;
      font-size: 1.8rem;
    }
  } 
}

.site-menu-toggle {
  width: 33px;
  height: 18px;
  margin-top: 1.95 * @font-size-logo-min;
  
  background: transparent url(/img/icon-menu.svg) 50% 50% no-repeat;
  background-size: contain;
  border: 0;
  
  text-indent: -9999em;
  
  @media only screen and (min-width: @screen-sm-min) {
    width: 44px;
    height: 24px;
    margin: 0 @padding-body-horizontal;
  }
}


/*
 * Main content
 */
.container {
  max-width: 42em; // make it readable
  padding: 0 @padding-body-horizontal;
  
  p {
    margin-bottom: 1em;
  }
}

#main { 
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

#home {
  padding-top: 1rem;
}

/*
 * Logos on homepage
 */
.jumbotron {
  margin: 0 @padding-body-horizontal @padding-body-vertical;
  padding: 0;
  
  background: transparent;
  border-radius: 0 !important;
  
  &.shrink {
    display: none;
  }
  
  .svg-container {
    position: relative;
    height: 0;
    padding-bottom: 100%;
  }
  
  svg {
    position: absolute;
    top: 0;
    left: 0;
    
    width: 100%;
    height: 100%;
  }
  
  p {
    font-size: 1em;
  }
  
  a {
    display: inline-block;
    max-width: 200px;
    margin: 0 auto;
    
    &:hover {
      .black {
        fill: white;
      }
    }
  }
  
  .col-sm-4 {
    padding: 0 0 1.5rem;
    border-bottom: @border-default;
    text-align: center;
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    border-bottom: @border-default;
    
    a {
      width: 100%;
      max-width: 300px;
    }
    
    .col-sm-4 {
      border: 0;
    }
    
    &.shrink {
      display: block;
      margin-top: -1.5rem;
      
      .svg-container {
        padding-bottom: 40%;
      }
      
      .col-sm-4 {
        padding-bottom: 0;
      }
    }
  }
}

#link-smartervote,
#link-debattenblog,
#link-expo16 {
  display: block;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-size: cover;
}

#link-smartervote:hover { background-image: url(/img/logobg-smartervote@2x.jpg); } 
#link-debattenblog:hover { background-image: url(/img/logobg-debattenblog@2x.jpg); } 
#link-expo16:hover { background-image: url(/img/logobg-expo16@2x.jpg); } 

.meteor-blog-index {
  &:extend(.container);
}

.dropdown-menu {
  z-index: 10000000;
}

.page-header {
  margin: 0 auto;
}
#post .page-header h1 {
  margin: 1em 0;
  padding: 0;
}

#post {
  margin-bottom: 3em;
  
  h1 {
    margin: 0.25em 0 0.5em;
    font-size: 1.2em;
  }
  
  p {
    margin-bottom: 1em;
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    font-size: 1.1em;
    
    h1 {
      font-size: 1.3em;
    }
  }
  
  @media only screen and (min-width: @screen-lg-min) {
    font-size: 1.2em;
    
    h1 {
      font-size: 1.5em;
    }
  }
}

footer {
  text-align: center;
}

